# cross-device-manager

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  BETA-TESTING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.fedora  LICENSE  README.md  test-vm-install.sh  test-vm.sh  vcpkg.json
app/: CMakeLists.txt
app/include/devmgr/app/: application_facade.hpp  device_detail_vm.hpp  device_list_vm.hpp  device_service.hpp  disabled_overlay.hpp  hotplug_service.hpp  modules_vm.hpp  snapshots_vm.hpp  status_line_vm.hpp  ui_dispatcher.hpp  updates_vm.hpp
app/src/: application_facade.cpp  device_detail_vm.cpp  device_list_vm.cpp  device_service.cpp  disabled_overlay.cpp  hotplug_service.cpp  modules_vm.cpp  placeholder.cpp  snapshots_vm.cpp  status_line_vm.cpp  updates_vm.cpp
cli/: CMakeLists.txt
cli/src/: cli.cpp  cli.hpp  main.cpp
cli/tests/: CMakeLists.txt  test_cli.cpp
core/: CMakeLists.txt
core/include/devmgr/core/: criticality.hpp  device_presentation.hpp  events.hpp  models.hpp  result.hpp  sha256.hpp  snapshot_diff.hpp  snapshot_history.hpp  snapshot_json.hpp  snapshot_models.hpp  snapshot_presentation.hpp  update_models.hpp  version.hpp  version.hpp.in
core/include/devmgr/pal/: criticality.hpp  hotplug_event.hpp  interfaces.hpp
core/include/devmgr/runtime/: cancellation.hpp  delayed_scheduler.hpp  event_bus.hpp  logging.hpp  progress.hpp  task_scheduler.hpp
core/include/devmgr/services/: critical_device_guard.hpp  device_key.hpp
core/src/: critical_device_guard.cpp  criticality.cpp  delayed_scheduler.cpp  device_key.cpp  device_presentation.cpp  logging.cpp  models.cpp  sha256.cpp  snapshot_diff.cpp  snapshot_history.cpp  snapshot_json.cpp  snapshot_models.cpp  snapshot_presentation.cpp  task_scheduler.cpp  version.cpp
daemon/: CMakeLists.txt
daemon/data/: devmgrd.service  org.devmgr.Manager1.conf  org.devmgr.Manager1.service  org.devmgr.policy
daemon/include/devmgr/daemon/: atomic_file.hpp  authority.hpp  enforcement_service.hpp  entry_json.hpp  request_processor.hpp  request_validation.hpp  snapshot_service.hpp  snapshot_store.hpp  state_store.hpp  sysfs_device_probe.hpp
daemon/src/: atomic_file.cpp  enforcement_service.cpp  entry_json.cpp  main.cpp  manager_adaptor.cpp  manager_adaptor.hpp  polkit_authority.cpp  polkit_authority.hpp  request_processor.cpp  snapshot_service.cpp  snapshot_store.cpp  state_store.cpp  sysfs_device_probe.cpp
gui/: CMakeLists.txt
gui/src/: device_list_model.cpp  device_list_model.hpp  gui_app.cpp  gui_app.hpp  main.cpp  main_window.cpp  main_window.hpp  module_list_model.cpp  module_list_model.hpp  qt_ui_dispatcher.cpp  qt_ui_dispatcher.hpp  snapshot_list_model.cpp  snapshot_list_model.hpp  update_list_model.cpp  update_list_model.hpp
gui/tests/: gui_test_main.cpp  test_device_list_model.cpp  test_main_window.cpp  test_module_list_model.cpp  test_qt_ui_dispatcher.cpp  test_snapshot_list_model.cpp  test_update_list_model.cpp
packaging/: CMakeLists.txt  cpack-per-generator.cmake  devmgrd.initd  install.sh  manifest.sh  uninstall.sh
packaging/deb/: postinst  postrm  prerm
packaging/rpm/: post  preun
packaging/sbom/: merge-sbom.py  overlay.spdx.json
packaging/signing/: .gitignore  README.md  devmgr.pub
platform/linux/: CMakeLists.txt
platform/linux/include/devmgr/platform/linux/: cab_resolver.hpp  dbus_contract.hpp  dbus_privileged_channel.hpp  dkms_status_provider.hpp  fwupd_contract.hpp  fwupd_update_provider.hpp  kmod_driver_manager.hpp  kmod_error_taxonomy.hpp  linux_criticality_prober.hpp  (+5 more)
platform/linux/src/: cab_resolver.cpp  dbus_privileged_channel.cpp  dkms_status_provider.cpp  fwupd_contract.cpp  fwupd_update_provider.cpp  kmod_driver_manager.cpp  linux_criticality_prober.cpp  linux_system_info.cpp  sysfs_device_controller.cpp  udev_device_enumerator.cpp  udev_device_mapper.cpp  udev_device_mapper.hpp  udev_hotplug_monitor.cpp
tests/: CMakeLists.txt
tests/fakes/: fake_criticality_prober.hpp  fake_hotplug_monitor.hpp  fake_pal.hpp  fake_privileged_channel.hpp  fake_update_provider.hpp  inline_ui_dispatcher.hpp
tests/fixtures/kmod/: generate_fixtures.sh
tests/fwupd/: CMakeLists.txt  fake_fwupd_daemon.cpp  fake_fwupd_daemon.hpp  test_fwupd_provider_ipc.cpp
tests/integration/: CMakeLists.txt  test_udev_enumerator.cpp  test_udev_hotplug_monitor.cpp
tests/ipc/: CMakeLists.txt  test_ipc_round_trip.cpp
tests/smoke/: CMakeLists.txt  fwupd_smoke_main.cpp
tests/unit/: test_application_facade.cpp  test_application_facade_updates.cpp  test_cab_resolver.cpp  test_critical_device_guard.cpp  test_criticality.cpp  test_dbus_contract.cpp  test_delayed_scheduler.cpp  test_device_detail_vm.cpp  test_device_key.cpp  test_device_list_vm.cpp  test_device_presentation.cpp  test_device_service.cpp  test_disabled_overlay.cpp  test_dkms_status_provider.cpp  test_enforcement_service.cpp  test_event_bus.cpp  test_fake_pal.cpp  test_fwupd_contract.cpp  test_fwupd_provider_nodaemon.cpp  test_hotplug_service.cpp  test_kmod_driver_manager.cpp  test_kmod_error_taxonomy.cpp  test_linux_criticality_prober.cpp  test_linux_system_info.cpp  test_logging.cpp  test_models.cpp  test_modules_vm.cpp  test_request_processor.cpp  test_result.cpp  test_sha256.cpp  test_snapshot_diff.cpp  test_snapshot_history.cpp  test_snapshot_json.cpp  test_snapshot_models.cpp  test_snapshot_service.cpp  test_snapshot_store.cpp  test_snapshots_vm.cpp  test_state_store.cpp  test_status_line_vm.cpp  test_sysfs_device_controller.cpp  (+6 more)
tui/: CMakeLists.txt
tui/src/: ftxui_ui_dispatcher.cpp  ftxui_ui_dispatcher.hpp  main.cpp  render_util.hpp  theme.cpp  theme.hpp  tui_app.cpp  tui_app.hpp
tui/src/views/: devices_view.cpp  devices_view.hpp  modules_view.cpp  modules_view.hpp  snapshots_view.cpp  snapshots_view.hpp  status_bar.cpp  status_bar.hpp  tab_bar.cpp  tab_bar.hpp  updates_view.cpp  updates_view.hpp
tui/tests/: test_bars_render.cpp  test_devices_view_render.cpp  test_modules_view_render.cpp  test_snapshots_view_render.cpp  test_states_matrix.cpp  test_theme.cpp  test_updates_view_render.cpp
(+100 files in other folders)
